fixed buttton css and some margins, paddings, aligning

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
     flex-direction: column;
     background-color: #1f2937;
     justify-content: space-between;
-    padding: 20px 200px 20px 200px;
+    padding: 20px 200px 100px 200px;
     border: 0;
     margin: 0;
 }
@@ -21,6 +21,7 @@ body{
 .heading{
     display: flex;
     justify-content: space-between;
+    align-items: flex-start;
 }
 
 .links{
@@ -56,7 +57,7 @@ li{
 .signup{
     display: flex;
     justify-content: space-between;
-    gap: 40px;
+    gap: 60px;
 }
 
 .left{
@@ -64,4 +65,22 @@ li{
     flex-direction: column;
     justify-content: center;
     gap: 8px;
+}
+
+button{
+    border-radius: 8px;
+    padding: 8px 16px;
+    color: white;
+}
+
+button.sign1{
+    background: #3882f6;
+    border: 0px;
+    flex: none;
+    width: fit-content;
+}
+
+button.sign2{
+    background: #3882f6;
+    border: 1px solid white;
 }
